{"message":"Update file: 2024.md","userId":"458","fileName":"2024.md"}

--- a/_information-for-public/Licensing Actions Taken/2024.md
+++ b/_information-for-public/Licensing Actions Taken/2024.md
@@ -5,4 +5,8 @@ variant: tiptap
 description: ""
 third_nav_title: Licensing Actions Taken
 ---
+<p>This list contains the licensing actions taken by the Licensing Officer
+pursuant to section 56 of the Insolvency, Restructuring and Dissolution
+Act 2018.</p>
+<p></p>
 <p></p>
